# sensorial-systems.github.io

./: CNAME  Cargo.toml  README.md  index.html
assets/: page-dxh1ef56156d492d31f.js  page-dxh4064fd39b925bfeb.js  page-dxh59a92e112dd79b25.js  page-dxh7dc97ff2a0ca8398.js  page-dxh8ff845d0df499916.js  page-dxhbc64a2184c9ce6.js  page_bg-dxh2fbee081ec0ea5.wasm  page_bg-dxh55b6b117217d14b0.wasm  page_bg-dxha4b4a373a328b48a.wasm  page_bg-dxhd4d112796c6a4d.wasm  page_bg-dxhf39710c907bd841.wasm
crates/page/: Cargo.toml  Dioxus.toml
crates/page/src/: canvas.rs  main.rs  shader.wgsl
crates/page/src/brand/: mod.rs  style.css
crates/page/src/canvas/: mod.rs  shader.wgsl
crates/page/src/landing_page/: mod.rs  style.css
crates/page/src/product/: mod.rs  style.css
crates/page/src/theme/: mod.rs
wasm/: page.js
