[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
gpu = { path = "../gpu/crates/gpu" }
web-component = { path = "../web-component/crates/web-component", features = [
    "web",
] }
dioxus = { version = "0.7.2", features = ["web", "router"] }
wgpu = { version = "25.0", default-features = false, features = [
    "webgl",
    "wgsl",
] }
bytemuck = "1.16"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
    "HtmlCanvasElement",
    "Performance",
    "console",
] }
