[package]
name = "page"
version.workspace = true
edition.workspace = true

[dependencies]
gpu.workspace = true
web-component.workspace = true
dioxus.workspace = true
wgpu.workspace = true
bytemuck.workspace = true
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
gloo-timers = { version = "0.3", features = ["futures"] }
web-sys.workspace = true
